[tool.ruff]
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
check_untyped_defs = true
show_column_numbers = true

[tool.poetry]
name = "reimbursement"
version = "0.1.0"
description = "Generate Word document from reimbursement forms automatically."
authors = ["chenjunhan <beibingyangliuying@foxmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
PyMonad = "^2.4.0"
python-docx = "^1.1.2"
pandas = "^2.2.2"
cytoolz = "^0.12.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.2"
mypy = "^1.11.2"
ipykernel = "^6.29.5"
pandas-stubs = "^2.2.2.240807"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
